# eleven-data-challenge

./: .env.example  .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
constants/: column_names.py  feature_categories.py  paths.py
data/: bronze.dvc
docs/: DVC_WORKFLOW.md  PROJECT_OWNER_CHECKLIST.md  SETUP.md
src/pipelines/data/: bronze_to_silver.py  silver_to_gold.py
src/pipelines/models/: catboost_model.py  create_predictions.py  lightgbm_model.py  linear_regression.py  random_forest.py  train_models.py  xgboost_model.py
src/pipelines/utils/: model_inputs_loading.py  model_prediction_making.py
src/streamlit/: components.py  data_loading.py  looks.py  streamlit_app.py
